[package]
name = "compiler-exp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
antlr-rust = { git = "https://github.com/rrevenantt/antlr4rust.git", rev = "4eecc87e942531fec2d5901af0d138d9339c8e80"}
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "02fb7045f7a952c80bc983e19093c62c6ccffe3d", features = ["llvm13-0"] }
codespan-reporting = "0.11.1"
bit-set = "0.5.2"
